Fix the bug that BottomRelated is not showing properly for some posts
- fix the bug that BottomRelated is not showing properly for some posts
- replaced '採訪' with '文'

--- a/src/components/article/BottomRelateds.scss
+++ b/src/components/article/BottomRelateds.scss
@@ -29,6 +29,11 @@
     padding: 0 15px;
     width: 100%;
   }
+
+  a:focus, a:hover {
+    text-decoration: none;
+    color: $gray-15;
+  }
 }
 
 .relatedItem:last-of-type {
